# lucid

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE.md  Procfile  README.md  README.rst  app.json  azure-pipelines.yml  heroku.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  docker-compose.yml  docker.yml  lucid.yml
.github/azure/: azuredeploy.json  azuredeploy.parameters.json
.github/workflows/: Lucid.yml  Release.yml  rust-release.yml
assets/: welcome.html
assets/webui/src/store/: index.js
benches/: kvstore_bench.rs
cli/: Cargo.toml
cli/src/: cli.yml  client.rs  main.rs
lucid/src/: kvstore.rs  lucid.rs
lucid/webui/src/components/Kv/: SetKey.vue
lucid/webui/src/views/: Login.vue
scripts/: build.sh  heroku.sh
server/: Cargo.toml
server/src/: cli.yml  configuration.rs  kvstore.rs  lucid.rs  main.rs  server.rs
src/: build.rs  cli.yml  configuration.rs  crossplatform.rs  error.rs  kvstore.rs  lib.rs  logger.rs  lucid.rs  main.rs  server.rs  utils.rs
src/lucid/: logger.rs  server.rs
tests/: api_test.rs  kvstore_test.rs
webui/: .env.example  .eslintrc.js  README.md  babel.config.js  package.json  vue.config.js
webui/public/: index.html
webui/src/: App.vue  lucidApi.js  main.css  main.js
webui/src/components/: Loader.vue  PageLoader.vue  Sidebar.vue
webui/src/components/Kv/: GetKey.vue  SetKey.vue
webui/src/router/: index.js
webui/src/store/: index.js
webui/src/views/: Home.vue  KvProofOfConcept.vue  Login.vue
