[package]
name = "lucid"
description = "A Fast, Secure and Distributed KV store with an HTTP API."
version = "0.1.2"
authors = ["Clint.Network <me@clint.network>", "Jonathan Serra <jonathan@blocs.fr>", "CephalonRho <CephalonRho@gmail.com>", "rigwild <me@rigwild.dev>"]
edition = "2018"
keywords = ["kv", "distributed", "ledger", "kv-store", "key-value", "rest", "http", "swagger", "server-sent-event", "web-ui", "encryption", "persistence", "serpent", "redis"]
repository = "https://github.com/lucid-kv/lucid"
readme = "https://github.com/lucid-kv/lucid/blob/master/README.md"
license = "https://github.com/lucid-kv/lucid/blob/master/LICENSE.md"
documentation = "https://docs.lucid-kv.store/"
categories = ["command-line-interface", "web-programming::http-server", "web-programming::websocket", "authentication", "command-line-utilities", ]
build = "src/build.rs"

[package.metadata.winres]
ProductName = "Lucid KV"
LegalCopyright = "Copyright © 2019 Lucid - All Rights Reserved"

[badges]
github = { repository = "lucid-kv/lucid", branch = "master" }

[build-dependencies]
winres = "0.1.11"

[dependencies]
nickel = "0.11.0"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
serde_yaml = "0.8.11"
yaml-rust = "0.4.3"
chrono = "0.4.10"
include_dir = "0.5.0"
jsonwebtoken = "7.0.0-alpha.2"
app_dirs = "1.2.1"
ring = "0.16.9"
uuid = "0.8.1"
rand = "0.7.3"
chashmap = "2.2.2"
plugin = "0.2.6"
tree_magic = "0.2.1"
byte-unit = "3.0.3"
snafu = "0.6.2"
bytes = "0.5.3"
fern = "0.5.9"

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]

[dependencies.warp]
version = "0.2.0"
features = ["tls"]

[dependencies.log]
version = "0.4.8"
features = ["serde"]

[dependencies.tokio]
version = "0.2.9"
features = ["full"]
