[package]
name = "cli"
description = "A Fast, Secure and Distributed KV store with an HTTP API."
version = "0.1.2"
authors = ["Clint.Network <me@clint.network>", "Jonathan Serra <jonathan@blocs.fr>", "CephalonRho <CephalonRho@gmail.com>", "rigwild <me@rigwild.dev>"]
edition = "2018"
keywords = ["kv", "distributed", "ledger", "kv-store", "key-value", "rest", "http", "swagger", "server-sent-event", "web-ui", "encryption", "persistence", "serpent", "redis"]
repository = "https://github.com/lucid-kv/lucid"
readme = "https://github.com/lucid-kv/lucid/blob/master/README.md"
license = "https://github.com/lucid-kv/lucid/blob/master/LICENSE.md"
documentation = "https://docs.lucid-kv.store/"
categories = ["command-line-interface", "web-programming::http-server", "web-programming::websocket", "authentication", "command-line-utilities", ]
build = "build.rs"

[package.metadata.winres]
ProductName = "Lucid KV CLI"
LegalCopyright = "Copyright © 2019 Lucid - All Rights Reserved"

[badges]
github = { repository = "lucid-kv/lucid", branch = "master" }

[[bin]]
name = "lucid-cli"
path = "src/main.rs"

[build-dependencies]
winres = "0.1.11"

[dependencies]
serde_json = "1.0.42"
serde_yaml = "0.8.11"
chrono = "0.4.10"
jsonwebtoken = "6.0.1"
snafu = { version = "0.6.0", features = [ "futures-01" ] }
log = { version = "0.4.8" }
env_logger = "0.7.1"
clap = { version = "2.33.0", features = [ "yaml" ] }
warp = { version = "0.1.20", features = [ "tls" ] }
serde = { version = "1.0.103", features = [ "derive" ] }
hyper = "0.12.35"
hyper-rustls = "0.16.1"
