[package]
name = "server"
description = "A Fast, Secure and Distributed KV store with an HTTP API."
version = "0.1.2"
authors = ["Clint.Network <me@clint.network>", "Jonathan Serra <jonathan@blocs.fr>", "CephalonRho <CephalonRho@gmail.com>", "rigwild <me@rigwild.dev>"]
edition = "2018"
keywords = ["kv", "distributed", "ledger", "kv-store", "key-value", "rest", "http", "swagger", "server-sent-event", "web-ui", "encryption", "persistence", "serpent", "redis"]
repository = "https://github.com/lucid-kv/lucid"
readme = "https://github.com/lucid-kv/lucid/blob/master/README.md"
license = "https://github.com/lucid-kv/lucid/blob/master/LICENSE.md"
documentation = "https://docs.lucid-kv.store/"
categories = ["command-line-interface", "web-programming::http-server", "web-programming::websocket", "authentication", "command-line-utilities", ]
build = "build.rs"

[package.metadata.winres]
ProductName = "Lucid KV"
LegalCopyright = "Copyright © 2019 Lucid - All Rights Reserved"

[badges]
github = { repository = "lucid-kv/lucid", branch = "master" }

[[bin]]
name = "lucid-server"
path = "src/main.rs"

[build-dependencies]
winres = "0.1.11"

[dependencies]
serde_json = "1.0.42"
serde_yaml = "0.8.11"
chrono = "0.4.10"
jsonwebtoken = "7.0.0-alpha.2"
app_dirs = "1.2.1"
ring = "0.16.9"
uuid = "0.8.1"
rand = "0.7.2"
chashmap = "2.2.2"
tree_magic = "0.2.1"
byte-unit = "3.0.3"
snafu = "0.6.0"
bytes = "0.4.12"
log = { version = "0.4.8", features = ["serde"] }
fern = "0.5.9"
clap = { version = "2.33.0", features = ["yaml"] }
warp = { git = "https://github.com/seanmonstar/warp.git", rev = "09c215a", features = ["tls"] }
serde = { version = "1.0.103", features = ["derive"] }
tokio = "0.2.0-alpha.1"
